syntax = "proto3";

package auth;

option go_package = "pb/";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
}

message Response {
    int32 status = 1;
    string error = 2;
}

enum ROLES {
  ADMIN = 0;
  USER = 1;
}

// Login
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  Response baseResponse = 1;
  string token = 2;
  string id = 3;
  ROLES role = 4;
}

// Validate
message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  Response baseResponse = 1;
  string id = 2;
  ROLES role = 3;
}

// Register
message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  string surname = 4;
}

message RegisterResponse {
  Response baseResponse = 1;
}
